--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="yandex_maps_key" templateMergeStrategy="preserve" translatable="false">bf9689cc-7bfa-4d6e-9baa-72d6d03a2337</string>
+    <string name="yandex_maps_key" templateMergeStrategy="preserve" translatable="true">bf9689cc-7bfa-4d6e-9baa-72d6d03a2337</string>
 </resources>
